--- a/grpdecompilershell.lpi
+++ b/grpdecompilershell.lpi
@@ -1,15 +1,13 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <CONFIG>
   <ProjectOptions>
-    <Version Value="9"/>
+    <Version Value="10"/>
     <PathDelim Value="\"/>
     <General>
       <MainUnit Value="0"/>
       <Title Value="grpdecompilershell"/>
       <ResourceType Value="res"/>
-      <UseXPManifest Value="True"/>
       <Icon Value="0"/>
-      <ActiveWindowIndexAtStart Value="0"/>
     </General>
     <i18n>
       <EnableI18N LFM="False"/>
@@ -39,7 +37,6 @@
       <Unit0>
         <Filename Value="grpdecompilershell.lpr"/>
         <IsPartOfProject Value="True"/>
-        <UnitName Value="grpdecompilershell"/>
         <UsageCount Value="21"/>
       </Unit0>
       <Unit1>
@@ -48,25 +45,22 @@
         <ComponentName Value="Form1"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <UnitName Value="grpdecompilershellcode"/>
         <IsVisibleTab Value="True"/>
-        <EditorIndex Value="0"/>
-        <WindowIndex Value="0"/>
-        <TopLine Value="121"/>
-        <CursorPos X="39" Y="103"/>
+        <TopLine Value="170"/>
+        <CursorPos Y="175"/>
         <UsageCount Value="21"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
       </Unit1>
     </Units>
-    <JumpHistory Count="5" HistoryIndex="4">
+    <JumpHistory Count="6" HistoryIndex="5">
       <Position1>
         <Filename Value="grpdecompilershellcode.pas"/>
-        <Caret Line="149" Column="1" TopLine="149"/>
+        <Caret Line="149" TopLine="149"/>
       </Position1>
       <Position2>
         <Filename Value="grpdecompilershellcode.pas"/>
-        <Caret Line="148" Column="1" TopLine="148"/>
+        <Caret Line="148" TopLine="148"/>
       </Position2>
       <Position3>
         <Filename Value="grpdecompilershellcode.pas"/>
@@ -80,6 +74,10 @@
         <Filename Value="grpdecompilershellcode.pas"/>
         <Caret Line="191" Column="111" TopLine="186"/>
       </Position5>
+      <Position6>
+        <Filename Value="grpdecompilershellcode.pas"/>
+        <Caret Line="91" Column="40" TopLine="79"/>
+      </Position6>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
@@ -97,6 +95,9 @@
       <TargetProcessor Value="80386"/>
       <TargetCPU Value="i386"/>
       <TargetOS Value="win32"/>
+      <Optimizations>
+        <OptimizationLevel Value="0"/>
+      </Optimizations>
     </CodeGeneration>
     <Linking>
       <Debugging>
@@ -110,12 +111,6 @@
         </Win32>
       </Options>
     </Linking>
-    <Other>
-      <CompilerMessages>
-        <UseMsgFile Value="True"/>
-      </CompilerMessages>
-      <CompilerPath Value="$(CompPath)"/>
-    </Other>
   </CompilerOptions>
   <Debugging>
     <Exceptions Count="3">
