--- a/grpdecompilershell.lpi
+++ b/grpdecompilershell.lpi
@@ -12,14 +12,14 @@
     <i18n>
       <EnableI18N LFM="False"/>
     </i18n>
-    <BuildModes Count="2" Active="Windows 64 bit">
+    <BuildModes Count="2" Active="Windows 32 bit">
       <Item1 Name="Windows 32 bit" Default="True"/>
       <Item2 Name="Windows 64 bit">
         <CompilerOptions>
           <Version Value="11"/>
           <PathDelim Value="\"/>
           <Target>
-            <Filename Value="64\grpdecompilershell"/>
+            <Filename Value="grpdecompilershell64"/>
           </Target>
           <SearchPaths>
             <IncludeFiles Value="$(ProjOutDir)"/>
@@ -75,14 +75,14 @@
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <IsVisibleTab Value="True"/>
-        <TopLine Value="127"/>
-        <CursorPos X="44" Y="81"/>
+        <TopLine Value="67"/>
+        <CursorPos X="44" Y="84"/>
         <UsageCount Value="21"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
       </Unit1>
     </Units>
-    <JumpHistory Count="6" HistoryIndex="5">
+    <JumpHistory Count="8" HistoryIndex="7">
       <Position1>
         <Filename Value="grpdecompilershellcode.pas"/>
         <Caret Line="149" TopLine="149"/>
@@ -107,13 +107,21 @@
         <Filename Value="grpdecompilershellcode.pas"/>
         <Caret Line="91" Column="40" TopLine="79"/>
       </Position6>
+      <Position7>
+        <Filename Value="grpdecompilershellcode.pas"/>
+        <Caret Line="177" Column="70" TopLine="175"/>
+      </Position7>
+      <Position8>
+        <Filename Value="grpdecompilershellcode.pas"/>
+        <Caret Line="193" Column="135" TopLine="187"/>
+      </Position8>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
     <Version Value="11"/>
     <PathDelim Value="\"/>
     <Target>
-      <Filename Value="32\grpdecompilershell"/>
+      <Filename Value="grpdecompilershell"/>
     </Target>
     <SearchPaths>
       <IncludeFiles Value="$(ProjOutDir)"/>
