--- a/grpdecompilershell.lpi
+++ b/grpdecompilershell.lpi
@@ -65,11 +65,11 @@
         <PackageName Value="LCL"/>
       </Item1>
     </RequiredPackages>
-    <Units Count="2">
+    <Units Count="3">
       <Unit0>
         <Filename Value="grpdecompilershell.lpr"/>
         <IsPartOfProject Value="True"/>
-        <UsageCount Value="21"/>
+        <UsageCount Value="22"/>
       </Unit0>
       <Unit1>
         <Filename Value="grpdecompilershellcode.pas"/>
@@ -78,14 +78,21 @@
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <IsVisibleTab Value="True"/>
-        <TopLine Value="56"/>
-        <CursorPos X="13" Y="67"/>
-        <UsageCount Value="21"/>
+        <TopLine Value="166"/>
+        <CursorPos X="8" Y="58"/>
+        <UsageCount Value="22"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
       </Unit1>
+      <Unit2>
+        <Filename Value="C:\Software\Programing\lazarus\fpc\3.2.2\source\rtl\win\syswinh.inc"/>
+        <EditorIndex Value="-1"/>
+        <TopLine Value="11"/>
+        <CursorPos X="2" Y="19"/>
+        <UsageCount Value="10"/>
+      </Unit2>
     </Units>
-    <JumpHistory Count="8" HistoryIndex="7">
+    <JumpHistory Count="10" HistoryIndex="9">
       <Position1>
         <Filename Value="grpdecompilershellcode.pas"/>
         <Caret Line="149" TopLine="149"/>
@@ -118,6 +125,14 @@
         <Filename Value="grpdecompilershellcode.pas"/>
         <Caret Line="193" Column="135" TopLine="187"/>
       </Position8>
+      <Position9>
+        <Filename Value="grpdecompilershellcode.pas"/>
+        <Caret Line="54" Column="19" TopLine="47"/>
+      </Position9>
+      <Position10>
+        <Filename Value="grpdecompilershellcode.pas"/>
+        <Caret Line="56" Column="17" TopLine="48"/>
+      </Position10>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
