--- a/grpdecompilershell.lpi
+++ b/grpdecompilershell.lpi
@@ -79,7 +79,8 @@
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <IsVisibleTab Value="True"/>
-        <CursorPos X="43" Y="75"/>
+        <TopLine Value="82"/>
+        <CursorPos X="166" Y="75"/>
         <UsageCount Value="22"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
